test/Sema/implementation-only-import-inlinable-multifile.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t/indirects.codemodule %S/Inputs/implementation-only-imports/indirects.code \
// RUN:   -enable-library-evolution -language-version 5
// RUN: %target-language-frontend -emit-module -o %t/directs.codemodule -I %t %S/Inputs/implementation-only-imports/directs.code \
// RUN:   -enable-library-evolution -language-version 5

// RUN: %target-language-frontend -typecheck -verify -primary-file %s %S/Inputs/implementation-only-imports/secondary_file.code -I %t \
// RUN:   -enable-library-evolution -language-version 5

@_implementationOnly import directs
// expected-warning @-1 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}
// 'indirects' is imported for re-export in a secondary file

// Types

@inlinable
public fn testStructFromDirect() {
  _ = StructFromDirect() // expected-error {{struct 'StructFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
  // expected-error@-1 {{initializer 'init()' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testStructFromIndirect() {
  _ = StructFromIndirect()
}

@inlinable
public fn testAliasFromDirect() {
  _ = AliasFromDirect() // expected-error {{type alias 'AliasFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
  // expected-error@-1 {{initializer 'init()' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testAliasFromIndirect() {
  _ = AliasFromIndirect()
}

@inlinable
public fn testGenericAliasFromDirect() {
  _ = GenericAliasFromDirect<Int>.this // expected-error {{type alias 'GenericAliasFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testGenericAliasFromIndirect() {
  immutable tmp: GenericAliasFromIndirect<Int>?
  _ = tmp
}

// Functions

@inlinable
public fn testFunctionFromDirect() {
  globalFunctionFromDirect() // expected-error {{global function 'globalFunctionFromDirect()' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testFunctionFromIndirect() {
  globalFunctionFromIndirect()
}

// Variables

@inlinable
public fn testVariableFromDirect_get() {
  _ = globalVariableFromDirect // expected-error {{var 'globalVariableFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testVariableFromIndirect_get() {
  _ = globalVariableFromIndirect
}

@inlinable
public fn testVariableFromDirect_set() {
  globalVariableFromDirect = 5 // expected-error {{var 'globalVariableFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testVariableFromIndirect_set() {
  globalVariableFromIndirect = 5
}

// Extensions

@inlinable
public fn testExtensionMethod(s: inout StructFromIndirect) {
  s.extensionMethodFromDirect() // expected-error {{instance method 'extensionMethodFromDirect()' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testExtensionProperty_get(s: inout StructFromIndirect) {
  _ = s.extensionPropertyFromDirect // expected-error {{property 'extensionPropertyFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testExtensionProperty_set(s: inout StructFromIndirect) {
  s.extensionPropertyFromDirect = 5 // expected-error {{property 'extensionPropertyFromDirect' cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testExtensionSubscript_get(s: inout StructFromIndirect) {
  _ = s[extensionSubscript: 0] // expected-error {{cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}

@inlinable
public fn testExtensionSubscript_set(s: inout StructFromIndirect) {
  s[extensionSubscript: 0] = 5 // expected-error {{cannot be used in an '@inlinable' function because 'directs' was imported implementation-only}}
}
